Add SYS_compat_60__lwp_park to the list of syscalls that can be resolved by loading kernel modules.

This seems to address my PR kern/48027